--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,12 @@ header {
 }
 .select-wrapper {
   position: absolute;
-  bottom: 0;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 h1 {
   margin: 0 0 8px 0;
+  margin-bottom: 40px;
 }
 a {
   text-decoration: none;
@@ -31,7 +31,7 @@ main {
   flex-direction: row;
   -webkit-align-items: stretch;
   align-items: stretch;
-  height: calc(100% - 120px);
+  height: 90vh;
 }
 .input,
 .output {
@@ -39,7 +39,8 @@ main {
   -webkit-align-items: stretch;
   align-items: stretch;
   width: 50%;
-  height: 100%;
+  height: 90%;
+  border-bottom: 2px solid #8dc63f;
 }
 .output {
   border-left: 2px solid #8dc63f;
